--- a/mylib/build.gradle
+++ b/mylib/build.gradle
@@ -1,32 +1,32 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.github.dcendents.android-maven'
-
-ext {
-
-    bintrayRepo = 'MyLib'
-    bintrayName = 'MyLib'
-
-    publishedGroupId = 'com.example.mylib'
-    libraryName = 'mylib'
-    artifact = 'mylib'
-
-    libraryDescription = 'A widget to load WebView as an sample.'
-
-    siteUrl = 'https://github.com/ptyagicodecamp/webview-overlay'
-    gitUrl = 'https://github.com/ptyagicodecamp/webview-overlay.git'
-
-    libraryVersion = '0.1.0'
-
-    developerId = 'abdul759'
-    developerName = 'Abdul Khira'
-    developerEmail = 'khiraabdulkadar@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-
-}
+//apply plugin: 'com.jfrog.bintray'
+//apply plugin: 'com.github.dcendents.android-maven'
+//
+//ext {
+//
+//    bintrayRepo = 'MyLib'
+//    bintrayName = 'MyLib'
+//
+//    publishedGroupId = 'com.example.mylib'
+//    libraryName = 'mylib'
+//    artifact = 'mylib'
+//
+//    libraryDescription = 'A widget to load WebView as an sample.'
+//
+//    siteUrl = 'https://github.com/ptyagicodecamp/webview-overlay'
+//    gitUrl = 'https://github.com/ptyagicodecamp/webview-overlay.git'
+//
+//    libraryVersion = '0.1.0'
+//
+//    developerId = 'abdul759'
+//    developerName = 'Abdul Khira'
+//    developerEmail = 'khiraabdulkadar@gmail.com'
+//
+//    licenseName = 'The Apache Software License, Version 2.0'
+//    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//    allLicenses = ["Apache-2.0"]
+//
+//}
 
 
 android {
@@ -63,5 +63,5 @@ dependencies {
 }
 
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
